--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ torch>=1.7.0
 torchvision>=0.8.0
 shapely>=1.7.0
 gitpython>=3.1.30
+pillow>=8.0.0
+matplotlib>=3.2.0
+tqdm>=4.41.0
+pyyaml>=5.3.1
+pandas>=1.1.0
+seaborn>=0.11.0
