--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+torch>=2.0.0
+torchvision>=0.15.0
 opencv-python>=4.8.0
-numpy>=1.26.0
-torch>=2.2.0
-torchvision>=0.17.0
+numpy>=1.24.0
+pandas>=2.0.0
 shapely>=2.0.0
-gitpython>=3.1.30
+ultralytics>=8.0.0  # For YOLOv5
+tqdm>=4.65.0  # For progress bars
+Pillow>=10.0.0  # For image processing
+matplotlib>=3.7.0  # For visualization
