Enhance YOLOv8 support and error handling in main.py, test_yolo.py
- Added checks for ultralytics package availability, providing informative error messages and installation guidance.
- Updated model handling to support YOLOv8, including fallback mechanisms to YOLOv5 if ultralytics is not installed.
- Improved logging for detection processes, ensuring users receive clear feedback on detection results and potential issues.
- Adjusted requirements.txt to clarify ultralytics version for YOLOv8 models.
- Enhanced test_yolo.py with error handling during model loading and prediction, ensuring robustness in detection tasks.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ opencv-python>=4.5.0
 numpy>=1.20.0
 pandas>=2.0.0
 shapely>=1.7.0
-ultralytics>=8.0.0  # For YOLOv5
+ultralytics>=8.0.0  # For YOLOv8 models
 tqdm>=4.65.0  # For progress bars
 Pillow>=10.0.0  # For image processing
 matplotlib>=3.7.0  # For visualization
