--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ opencv-python>=4.5.0
 numpy>=1.20.0
 pandas>=2.0.0
 shapely>=1.7.0
-ultralytics>=8.0.0  # For YOLOv8 models
-tqdm>=4.65.0  # For progress bars
-Pillow>=10.0.0  # For image processing
-matplotlib>=3.7.0  # For visualization
-picamera>=1.13  # For Raspberry Pi camera control
+ultralytics>=8.0.0
+tqdm>=4.65.0
+Pillow>=10.0.0
+matplotlib>=3.7.0
+picamera>=1.13
