--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 # Core requirements
 torch>=1.7.0,<2.0.0
 torchvision>=0.8.0,<2.0.0
-opencv-python>=4.4.0
-numpy==1.19.5  # Fixed version to avoid binary incompatibility issues on Raspberry Pi
+opencv-python>=4.5.0
+numpy>=1.19.0
 pandas>=1.1.0
 shapely>=1.7.0
 # Optional for YOLOv8 and newer models
