--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,21 @@
-# Core requirements
-torch==1.13.1
-torchvision==0.14.1
+# Core dependencies
+torch==2.0.1
+torchvision==0.15.2
 opencv-python>=4.5.0
 numpy>=1.19.0
 pandas>=1.1.0
 shapely>=1.7.0
+
+# YOLOv8 and Ultralytics models
 ultralytics>=8.0.0
+
+# Utilities
 tqdm>=4.41.0
 Pillow>=8.0.0
 matplotlib>=3.3.0
-picamera>=1.13 ; python_version < '3.9'
+
+# Camera (only if running Python <3.9, otherwise skip or use apt for picamera2)
+picamera>=1.13; python_version < "3.9"
+
+# For SSL fix etc.
 certifi>=2020.6.20
