--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ ultralytics>=8.0.0
 tqdm>=4.41.0
 Pillow>=8.0.0
 matplotlib>=3.3.0
+pytest>=7.0.0
 
 # Camera (only if running Python <3.9, otherwise skip or use apt for picamera2)
 picamera>=1.13; python_version < "3.9"
