Support 8-point court polygons

--- a/config.json
+++ b/config.json
@@ -77,6 +77,17 @@
     "MAX_ASPECT_RATIO": 4.0
   },
   "CourtPositions": [
-    [0, 0, 0, 0]
+    {
+      "points": [
+        [0, 0],
+        [0, 0],
+        [0, 0],
+        [0, 0],
+        [0, 0],
+        [0, 0],
+        [0, 0],
+        [0, 0]
+      ]
+    }
   ]
 }
