--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,8 @@ picamera>=1.13; python_version < "3.9"
 
 # For SSL fix etc.
 certifi>=2020.6.20
+
+# API framework
+fastapi>=0.110.0
+uvicorn>=0.24.0
+httpx>=0.27.0
