reset court positions

--- a/config.json
+++ b/config.json
@@ -86,82 +86,5 @@
         "# MAX_ASPECT_RATIO": "Maximum width/height ratio for court",
         "MAX_ASPECT_RATIO": 4.0
     },
-    "CourtPositions": [
-        {
-            "points": [
-                [
-                    661,
-                    737
-                ],
-                [
-                    1021,
-                    597
-                ],
-                [
-                    1020,
-                    477
-                ],
-                [
-                    889,
-                    458
-                ],
-                [
-                    212,
-                    518
-                ],
-                [
-                    663,
-                    742
-                ]
-            ]
-        },
-        {
-            "points": [
-                [
-                    154,
-                    492
-                ],
-                [
-                    728,
-                    455
-                ],
-                [
-                    583,
-                    442
-                ],
-                [
-                    103,
-                    465
-                ],
-                [
-                    156,
-                    495
-                ]
-            ]
-        },
-        {
-            "points": [
-                [
-                    80,
-                    454
-                ],
-                [
-                    497,
-                    437
-                ],
-                [
-                    409,
-                    432
-                ],
-                [
-                    61,
-                    442
-                ],
-                [
-                    80,
-                    454
-                ]
-            ]
-        }
-    ]
+    "CourtPositions": []
 }
